--- a/src/views/Financials.css
+++ b/src/views/Financials.css
@@ -147,6 +147,8 @@
 .icon-btn {
   width: 32px;
   height: 32px;
+  min-width: 44px;
+  min-height: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
